force-app/main/default/objects/RD_Disc_Comp_Mat_Cd__c/RD_Disc_Comp_Mat_Cd__c.object-meta.xml
<CustomObject>
    <label>RD Disc Comp Mat Cd</label>
    <nameField>
        <label>RD Disc Characteristic ComponentMatl</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RD Disc Characteristic ComponentMatl</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>