force-app/main/default/objects/RD_Disc_Comp_Mat_Cd__c/fields/ATEX__c.field-meta.xml
<CustomField>
    <fullName>ATEX__c</fullName>
    <label>ATEX</label>
    <length>20</length>
    <type>Text</type>
</CustomField>