force-app/main/default/objects/RD_Disc_Comp_Mat_Cd__c/fields/Component__c.field-meta.xml
<CustomField>
    <fullName>Component__c</fullName>
    <label>Component</label>
    <length>255</length>
    <type>Text</type>
</CustomField>