force-app/main/default/objects/RD_Disc_Comp_Mat_Cd__c/fields/D3ASRV__c.field-meta.xml
<CustomField>
    <fullName>D3ASRV__c</fullName>
    <label>D3ASRV</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <default>true</default>
                <label>N</label>
            </value>
            <value>
                <fullName>Y</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>