force-app/main/default/objects/RD_Disc_Comp_Mat_Cd__c/fields/MakeBuyFlag__c.field-meta.xml
<CustomField>
    <fullName>MakeBuyFlag__c</fullName>
    <label>MakeBuyFlag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>