force-app/main/default/objects/RD_Disc_Comp_Mat_Cd__c/fields/NACE__c.field-meta.xml
<CustomField>
    <fullName>NACE__c</fullName>
    <label>NACE</label>
    <length>20</length>
    <type>Text</type>
</CustomField>