force-app/main/default/objects/RD_Disc_Comp_Mat_Cd__c/fields/SizeLL__c.field-meta.xml
<CustomField>
    <fullName>SizeLL__c</fullName>
    <label>SizeLL</label>
    <precision>12</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>