force-app/main/default/objects/RD_Disc_Comp_Mat_Cd__c/fields/SizeUL__c.field-meta.xml
<CustomField>
    <fullName>SizeUL__c</fullName>
    <label>SizeUL</label>
    <precision>12</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>